--- a/currency-conversion-manage-service/currency-conversion-manage-service/src/main/resources/application.properties
+++ b/currency-conversion-manage-service/currency-conversion-manage-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.application.name=currency-conversion-manage-service
+spring.application.name=currency-conversion-factor-service
 server.port=8000
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-eureka.client.service-url.default-zone=http://localhost:8761
+
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${SERVICE_URL_DEFAULT_ZONE}
+management.endpoints.web.exposure.include=*
