--- a/eureka-naming-server/eureka-naming-server/pom.xml
+++ b/eureka-naming-server/eureka-naming-server/pom.xml
@@ -71,6 +71,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-eureka</finalName>
 	</build>
 
 </project>
