--- a/currency-conversion-manage-service/currency-conversion-manage-service/pom.xml
+++ b/currency-conversion-manage-service/currency-conversion-manage-service/pom.xml
@@ -92,6 +92,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-currency-exchange</finalName>
 	</build>
 
 </project>
